# AppLoader

./: .gitignore  App.apploader  CMakeLists.txt  ReadMe.md
doc/: EnvironmentVariables.md
include/: AppLoader.h  AppLoaderFile.h  Stream.hpp
lib/: CMakeLists.txt
lib/AppLoader/: AppLoader.cc  AppLoaderFile.cc  CMakeLists.txt  WideTOML.cc
lib/AppLoaderHandle/: AppDiscoverICON.cc  AppLoaderHandle.cc  AppLoaderHandle.h  AppLoaderHandle.idl  AppLoaderHandle.rc  CMakeLists.txt  Precompiled.cc  Precompiled.h
msbuild/: AppLoader.sln
msbuild/AppLoader/: AppLoader.vcxproj  AppLoader.vcxproj.filters
msbuild/AppLoaderHandle/: AppLoaderHandle.vcxproj  AppLoaderHandle.vcxproj.filters
msbuild/libAppLoader/: libAppLoader.vcxproj  libAppLoader.vcxproj.filters
resources/: AppLoaderInstall.ps1  AppLoaderUninstall.ps1
soruces/: main.cc
sources/: AppContainerExecute.cc  AppLoader.manifest  AppLoader.rc  BatchExecute.cc  CMakeLists.txt  Environment.cc  Environment.hpp  Executable.cc  Executable.hpp  Execute.hpp  PSExecute.cc  PSExecuteTemplate.ps1  PowerShellExecute.cc  Precompiled.cc  Precompiled.h  Process.cc  Process.hpp  main.cc  resource.h
